<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Username Section -->
        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EmailID"
                android:textColor="#191D31"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:padding="10dp">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Password Section -->
        <LinearLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_container"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#191D31"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:padding="10dp">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/password_image_desc"
                    android:src="@drawable/password" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Confirm Password Section -->
        <LinearLayout
            android:id="@+id/password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_container"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_password"
                android:textColor="#191D31"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:padding="10dp">

                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reenter_password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/password_image_desc"
                    android:src="@drawable/password" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Age Section -->
        <LinearLayout
            android:id="@+id/age_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_confirmation"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="#191D31"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:padding="10dp">

                <EditText
                    android:id="@+id/editTextAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sample_age"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Weight Section -->
        <LinearLayout
            android:id="@+id/weight_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/age_container"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="#191D31"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border"
                android:padding="10dp">

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kg"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Create Profile Button -->
        <Button
            android:id="@+id/createProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_container"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/round_button"
            android:text="@string/create_profile"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>
